--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'jacoco'
 apply plugin: 'findbugs'
+apply plugin: 'maven'
 
 sourceCompatibility = javaVersion
 targetCompatibility = javaVersion
@@ -39,6 +40,54 @@ jar {
 }
 
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+task createPom << {
+    pom
+    {
+        project {
+            name 'InMemoryStorage'
+            groupId 'com.codingrodent'
+            description 'In Memory Record Storage'
+            url 'https://github.com/codesqueak/InMemoryRecordStore.git'
+            scm {
+                url 'https://github.com/codesqueak/InMemoryRecordStore'
+                connection 'scm:git:git://github.com/codesqueak/InMemoryRecordStore.git'
+                developerConnection 'scm:git:ssh://github.com:codesqueak/InMemoryRecordStore.git'
+            }
+
+            licenses {
+                license {
+                    name 'The Apache Software License, Version 2.0'
+                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    distribution 'repo'
+                }
+            }
+            developers {
+                developer {
+                    id 'codesqueak'
+                    name 'codesqueak'
+                    email 'codesqueak@gmail.com'
+                    organizationUrl 'http://www.codingrodent.com'
+                    //  organization 'codesqueak'
+                }
+            }
+        }
+    }.writeTo("$buildDir/libs/" + projectName + "-" + version + ".pom")
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
 repositories {
     mavenCentral()
 }
@@ -88,13 +137,13 @@ tasks.withType(FindBugs) {
 
 check.dependsOn jacocoTestReport
 test.dependsOn javadoc
+test.dependsOn createPom
 compileJava.dependsOn setVersion
 
 dependencies {
     testCompile("junit:junit:4.12")
-    testCompile("org.mockito:mockito-all:2.+")
-//    testCompile("com.jayway.jsonpath:json-path-parent:1.+")
-    testCompile("org.hamcrest:hamcrest-all:1.+")
+    testCompile("org.mockito:mockito-all:2.0.2-beta")
+    testCompile("org.hamcrest:hamcrest-all:1.3")
 }
 
 task wrapper(type: Wrapper) {
