Fix licence reference

--- a/build.gradle
+++ b/build.gradle
@@ -66,8 +66,8 @@ task createPom << {
 
             licenses {
                 license {
-                    name 'The Apache Software License, Version 2.0'
-                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    name 'MIT License'
+                    url 'http://www.mit.edu'
                     distribution 'repo'
                 }
             }
