--- a/build.gradle
+++ b/build.gradle
@@ -117,6 +117,13 @@ jacocoTestReport {
         csv.enabled false
         html.destination "${buildDir}/jacocoHtml"
     }
+    afterEvaluate {
+        classDirectories = files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                    'com.codingrodent.InMemoryRecordStore.record.records/**'
+            ])
+        })
+    }
 }
 
 findbugs {
