Tweaking coverage reporting

--- a/build.gradle
+++ b/build.gradle
@@ -120,7 +120,8 @@ jacocoTestReport {
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
             fileTree(dir: it, exclude: [
-                    'com.codingrodent.InMemoryRecordStore.record.records/**'
+                    'com/codingrodent/InMemoryRecordStore/record/records/**',
+                    'com/codingrodent/InMemoryRecordStore/**/*Test.*'
             ])
         })
     }
