Tweak coverage reporting

--- a/build.gradle
+++ b/build.gradle
@@ -108,6 +108,7 @@ test
                 append = false
                 destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
                 classDumpFile = file("$buildDir/jacoco/classpathdumps")
+                excludes = ['com/codingrodent/InMemoryRecordStore/record/records/**','com/codingrodent/InMemoryRecordStore/**/*Test.class']
             }
         }
 
@@ -120,7 +121,8 @@ jacocoTestReport {
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
             fileTree(dir: it, exclude: [
-                    'com.codingrodent.InMemoryRecordStore.record.records/**'
+                    'com/codingrodent/InMemoryRecordStore/record/records/**',
+                    'com/codingrodent/InMemoryRecordStore/**/*Test.class'
             ])
         })
     }
